# highfret

./: .gitignore  GUI.ipynb  aligner_gui.ipynb  extract_gui.ipynb  extracter_gui.ipynb  readme.md  setup.cfg  setup.py  spotfinder_gui.ipynb
docs/: calibration_math.ipynb  development_notes.md  gui_template.ipynb
docs/graphics/: logo.afdesign
highfret/: __init__.py  aligner.py  cli.py  core.py  extracter.py  fast_median.py  jit_math.py  minmax.py  mle_extract.py  modelselect_alignment.py  prepare.py  punch.py  shape_evidence.py  spotfinder.py
highfret/containers/: __init__.py  general.py  tif_folder.py
highfret/gui/: __init__.py  aligner_gui.py  extracter_gui.py  spotfinder_gui.py
highfret/support/: __init__.py  aligner.py  calibrater.py  extracter.py  jit_math.py  minmax.py  mle_extract.py  modelselect_alignment.py  prepare.py  psf.py  punch.py  spotfinder.py
highfret/web/: webapp.py
highfret/web/templates/: index.html
