[metadata]
name = highfret
version = attr: highfret.__version__
description = attr: highfret.__description__
author = attr: highfret.__author__
license = attr: highfret.__license__
url = attr: highfret.__url__
long_description = file: README.md
long_description_content_type = text/markdown

[options]
include_package_data = True
python_requires = >=3.8
packages = find:
package_dir =
	= .
install_requires =
	numpy
	numba
	scipy
	matplotlib
	h5py
	tqdm

[options.entry_points]
console_scripts =
	highfret = highfret.cli:app

[options.extras_require]
calibration =
	pycromanager

[options.packages.find]
where = .